Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9606

Server crashes in fix_fields, main.null fails with ps-protocol #2

Details

    Description

      MDEV-9503 is closed, but the test still crashes (as of commit 4b08b10b3ace67481cb7c03e0d3e95aaf6e954f7):

      #3  <signal handler called>
      #4  0x000055605a82a0a2 in Item_func::fix_fields (this=0x7f8b945e80b8, thd=0x7f8b99bc94b0, ref=0x7f8b945e8258) at /src/10.1/sql/item_func.cc:208
      #5  0x000055605a52fe31 in setup_fields (thd=0x7f8b99bc94b0, ref_pointer_array=0x7f8b945e8900, fields=..., mark_used_columns=MARK_COLUMNS_READ, sum_func_list=0x7f8b94452fe8, allow_sum_func=true) at /src/10.1/sql/sql_base.cc:7950
      #6  0x000055605a5c6ad8 in JOIN::prepare (this=0x7f8b94452c88, rref_pointer_array=0x7f8b945e72c8, tables_init=0x7f8b945e82d8, wild_num=0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7f8b945e7050, unit_arg=0x7f8b945e6950) at /src/10.1/sql/sql_select.cc:795
      #7  0x000055605a5d0232 in mysql_select (thd=0x7f8b99bc94b0, rref_pointer_array=0x7f8b945e72c8, tables=0x7f8b945e82d8, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2416184064, result=0x7f8b945e88e0, unit=0x7f8b945e6950, select_lex=0x7f8b945e7050) at /src/10.1/sql/sql_select.cc:3429
      #8  0x000055605a5c5d89 in handle_select (thd=0x7f8b99bc94b0, lex=0x7f8b945e6888, result=0x7f8b945e88e0, setup_tables_done_option=0) at /src/10.1/sql/sql_select.cc:384
      #9  0x000055605a596133 in execute_sqlcom_select (thd=0x7f8b99bc94b0, all_tables=0x7f8b945e82d8) at /src/10.1/sql/sql_parse.cc:5903
      #10 0x000055605a58c20d in mysql_execute_command (thd=0x7f8b99bc94b0) at /src/10.1/sql/sql_parse.cc:2962
      #11 0x000055605a5b3b97 in Prepared_statement::execute (this=0x7f8b9449c070, expanded_query=0x7f8b9ffd8400, open_cursor=false) at /src/10.1/sql/sql_prepare.cc:4265
      #12 0x000055605a5b2a32 in Prepared_statement::execute_loop (this=0x7f8b9449c070, expanded_query=0x7f8b9ffd8400, open_cursor=false, packet=0x7f8b98dc9eba "", packet_end=0x7f8b98dc9eba "") at /src/10.1/sql/sql_prepare.cc:3897
      #13 0x000055605a5b089b in mysqld_stmt_execute (thd=0x7f8b99bc94b0, packet_arg=0x7f8b98dc9eb1 "\217", packet_length=9) at /src/10.1/sql/sql_prepare.cc:2974
      #14 0x000055605a588126 in dispatch_command (command=COM_STMT_EXECUTE, thd=0x7f8b99bc94b0, packet=0x7f8b98dc9eb1 "\217", packet_length=9) at /src/10.1/sql/sql_parse.cc:1432
      #15 0x000055605a5871a6 in do_command (thd=0x7f8b99bc94b0) at /src/10.1/sql/sql_parse.cc:1109
      #16 0x000055605a6bc798 in do_handle_one_connection (thd_arg=0x7f8b99bc94b0) at /src/10.1/sql/sql_connect.cc:1349
      #17 0x000055605a6bc4fc in handle_one_connection (arg=0x7f8b99bc94b0) at /src/10.1/sql/sql_connect.cc:1261
      #18 0x000055605adc2cec in pfs_spawn_thread (arg=0x7f8b987b0e70) at /src/10.1/storage/perfschema/pfs.cc:1860
      #19 0x00007f8b9fc530a4 in start_thread () from /lib64/libpthread.so.0
      #20 0x00007f8b9ddc104d in clone () from /lib64/libc.so.6

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.