MDEV-9606 Server crashes in fix_fields, main.null fails with ps-protocol #2